--- a/index.html
+++ b/index.html
@@ -50,11 +50,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
+                        <h2 class="text-white mb-4">Who are we?</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
-                            . The theme is open source, and you can use it for any purpose, personal or commercial.
+                           <p>
+                               <h3>About us </h3>
+                               Cartoon Ink Writers Network is a community of writers created by young and innovative writers, mainly to serve as a support system, nurturing and guiding both ongoing and prospective writers while equipping them with all the basic and necessary guidance for being success authors. 
+                               We believe in the power of community contribution and team work, that is why we support each other, so we can grow together.                                
+                           </p>
+                           <p>
+                               <h3></h3>
+                           </p>
+                            
                         </p>
                     </div>
                 </div>
